valueOf() plus performant que new Integer(0) ?